<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/beneficiaryActivate"
            android:id="@+id/tvBeneficiaryActivation"
            android:layout_centerHorizontal="true" />

        <LinearLayout

            android:id="@+id/otpAndCard"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/inputCard"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:hint="@string/inputCard"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:maxLength="20"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:id="@+id/otpLayout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/inputOTP"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextOTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_marginRight="10dp"
                    android:digits="1234567890"
                    android:hint="@string/rMobileOTP"
                    android:singleLine="true"
                    android:maxLength="7"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:id="@+id/mobileLayout"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/rMN"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_marginRight="10dp"
                    android:digits="1234567890"
                    android:hint="@string/rMobile"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/summaryCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:id="@+id/otpSubmit"
                    android:paddingRight="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/button_login"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/otpCancel"
                    android:paddingRight="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="20dp"
                    android:background="@drawable/button_login"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/otpSubmit" />
            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#0000ff">

        <TextView
            android:id="@+id/login_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/omneAgate"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


</RelativeLayout>
