<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:background="#07C8ff"
        android:layout_height="80dp"
        android:id="@+id/billViewLinearLayout">

        <TextView
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:id="@+id/tvBillViewSerialNoLabel"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="#"
            android:textSize="25sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/tvBillViewBillNoLabel"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/billViewBillNo"
            android:textSize="25sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBillViewDateLabel"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/billViewDate" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBillViewUfcLabel"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/billViewUfc" />


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvBillViewStatusLabel"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/billViewStatus" />


    </LinearLayout>


    <com.omneAgate.Util.PullToRefresh.LoadMoreListView
        android:id="@+id/pullRefresh"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/billViewLinearLayout"
        android:layout_above="@+id/relativeLayout3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="#0000ff"
        android:id="@+id/relativeLayout3">

        <TextView
            android:id="@+id/login_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/omneAgate"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>