<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/rMN"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_marginRight="10dp"
                android:digits="1234567890"
                android:hint="@string/rMobile"
                android:singleLine="true"
                android:maxLength="10"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:id="@+id/otpLayout"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/mobileOTP"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_marginRight="10dp"
                android:digits="1234567890"
                android:hint="@string/rMobileOTP"
                android:singleLine="true"
                android:maxLength="7"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/summaryCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/otpSubmit"
                android:paddingRight="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_login"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/otpCancel"
                android:paddingRight="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:background="@drawable/button_login"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/otpSubmit" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>